--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,9 +36,11 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
    implementation 'com.android.support:design:28.0.0'
     implementation 'com.android.support:appcompat-v7:28.0.0'
+    //Firebase
     implementation 'com.google.firebase:firebase-database:19.2.0'
     implementation 'com.google.firebase:firebase-auth:19.2.0'
     implementation 'com.firebaseui:firebase-ui-auth:4.3.1'
+    implementation 'com.google.firebase:firebase-storage:19.1.1'
 
 
 
